Changed java version from 19 to 19 preview. Added interface DuCompoundFile for compound DuFile'..Refactored code.